<resources>
    <string name="app_name">라이프케어</string>
    <string name="KelsonSansBold">Kelson-Sans-Bold.otf</string>
    <string name="KelsonSansLight">Kelson-Sans-Light.otf</string>
    <string name="KelsonSansRegular">Kelson-Sans-Regular.otf</string>
    <string name="NotoSansKRBold">NotoSansKR-Bold.otf</string>
    <string name="NotoSansKRMedium">NotoSansKR-Medium.otf</string>
    <string name="NotoSansKRRegular">NotoSansKR-Regular.otf</string>
    <string name="area_seoul">서울시</string>
    <string name="area_busan">부산광역시</string>
    <string name="area_daejeon">대전광역시</string>
    <string name="area_daegu">대구광역시</string>
    <string name="area_incheon">인천광역시</string>
    <string name="area_gwangju">광주광역시</string>
    <string name="area_ulsan">울산광역시</string>
    <string name="area_gyeongi">경기도</string>
    <string name="area_gangwon">강원도</string>
    <string name="area_chungbuk">충청북도</string>
    <string name="area_chungnam">충청남도</string>
    <string name="area_jeonbuk">전라북도</string>
    <string name="area_jeonnam">전라남도</string>
    <string name="area_gyeongbuk">경상북도</string>
    <string name="area_gyeongnam">경상남도</string>
    <string name="area_jeju">제주특별자치도</string>
    <string name="ing_life_care">ING 라이프케어</string>
    <string name="life_care_copylight">COPYLIGHT © 2014 ING LIFE INSURANCE. ALL RIGHT RESERVED.</string>
    <string name="text_next">다음</string>
    <string name="text_yes">네</string>
    <string name="text_no">아니요</string>
    <string name="text_dont_have">없음</string>
    <string name="text_device">장치</string>
    <string name="text_direct_enter">직접입력</string>
    <string name="text_setting">설정</string>
    <string name="message_finish_message">\'뒤로\'버튼 한번 더  누르면 종료됩니다.</string>
    <string name="message_finish_member">회원가입이 정상적으로 완료되었습니다.</string>
    <string name="message_finish_emember">수정이 정상적으로 완료되었습니다.</string>
    <string name="message_nowtime_over">측정시간이 미래일 수 없습니다.</string>
    <string name="text_work">운동</string>
    <string name="text_water">물</string>
    <string name="text_food">영양</string>
    <string name="text_sugar">혈당</string>
    <string name="text_weight">체중</string>
    <string name="text_fat">체지방</string>
    <string name="text_add">추가</string>
    <string name="text_main">Life CARE</string>
    <string name="text_morning">오전</string>
    <string name="text_afternoon">오후</string>
    <string name="text_good">좋음</string>
    <string name="text_normal">보통</string>
    <string name="text_bad">나쁨</string>
    <string name="text_vbad">매우나쁨</string>
    <string name="text_sun">일</string>
    <string name="text_mon">월</string>
    <string name="text_the">화</string>
    <string name="text_wed">수</string>
    <string name="text_thu">목</string>
    <string name="text_fri">금</string>
    <string name="text_sat">토</string>
    <string name="text_gallery">앨범</string>
    <string name="text_camera">카메라</string>
    <string name="text_alert">알림</string>
    <string name="text_alert_mesage_delete">삭제하시겠습니까?</string>
    <string name="text_alert_mesage_disable_edit">장치에서 측정된 데이터는 수정 할 수 없습니다.</string>
    <string name="text_phone_num">휴대폰 번호</string>
    <string name="text_confirm">확인</string>
    <string name="text_cancel">취소</string>
    <string name="text_save">저장</string>
    <string name="text_modify">수정</string>
    <string name="text_regist">등록</string>
    <string name="text_name">이름</string>
    <string name="text_id">아이디</string>
    <string name="text_pwd">비밀번호</string>
    <string name="text_sex">성별</string>
    <string name="text_mail">남자</string>
    <string name="text_femail">여자</string>
    <string name="text_birth">생년월일(8자리)</string>
    <string name="text_phonenum">휴대폰 번호(숫자만 입력해주세요)</string>
    <string name="text_height">신장</string>
    <string name="text_goal_height">목표 체중</string>
    <string name="text_centimiter">%,$.2fcm</string>
    <string name="text_killogram">%,fkg</string>
    <string name="text_foodafter">식후</string>
    <string name="text_foodbefore">식전</string>
    <string name="text_metrytime">측정시간</string>
    <string name="text_option">(선택사항)</string>
    <string name="text_contracttool">수축기</string>
    <string name="text_relaxtool">이완기</string>
    <string name="text_meditime">투약 시간</string>
    <string name="text_medi_info_input">투약 정보 입력</string>
    <string name="text_bloodsugar">혈당</string>
    <string name="text_weight_manage">체중 관리</string>
    <string name="text_weight_input">체중 입력</string>
    <string name="text_bloodsugar_manage">혈당 관리</string>
    <string name="text_bloodsugar_input">혈당 입력</string>
    <string name="text_mediname">약이름</string>
    <string name="text_daygoalstep">하루 목표 걸음 수</string>
    <string name="text_dayusecalory">하루 소모 칼로리</string>
    <string name="text_targetamount">목표량</string>
    <string name="text_target_modify">목표 수정</string>
    <string name="text_drinkvolume">마신량</string>
    <string name="text_drinktime">마신시간</string>
    <string name="text_datasourceset">데이터 소스 설정</string>
    <string name="text_googlefit">구글 피트니스</string>
    <string name="text_croise">Croise URBAN-S</string>
    <string name="text_more_info">상세정보</string>
    <string name="text_bodyfatrate">체지방률</string>
    <string name="text_bodyfatvolume">내장지방</string>
    <string name="text_stomachrate">수분량</string>
    <string name="text_musclevolume">근육량</string>
    <string name="text_fooddiary">식사일기</string>
    <string name="text_breakfast">아침</string>
    <string name="text_breakfast_code">a</string>
    <string name="text_lunch">점심</string>
    <string name="text_lunch_code">b</string>
    <string name="text_dinner">저녁</string>
    <string name="text_dinner_code">c</string>
    <string name="text_wriging">기록하기</string>
    <string name="text_history">히스토리</string>
    <string name="text_breakfast_snack">아침간식</string>
    <string name="text_breakfast_snack_code">d</string>
    <string name="text_lunch_snack">점심간식</string>
    <string name="text_lunch_snack_code">e</string>
    <string name="text_dinner_snack">저녁간식</string>
    <string name="text_dinner_snack_code">f</string>
    <string name="text_eattime">식사 시간</string>
    <string name="text_foodtime">식사 소요 시간</string>
    <string name="text_minute">분</string>
    <string name="text_foodnull">기록한 음식이 없습니다.</string>
    <string name="text_foodtit">음식명</string>
    <string name="text_health_message">건강 메시지</string>
    <string name="text_week_avg_balance">주간 영양 섭취 칼로리</string>
    <string name="text_week_avg_time">주간 평균 식사 소요시간</string>
    <string name="text_week_nutri_balance">주간 영양 섭취 균형도</string>
    <string name="text_ver_info">버전정보</string>
    <string name="text_pwd_info_modify">비밀번호 변경</string>
    <string name="text_body_examination_modify">신체 정보 수정</string>
    <string name="text_active_modify">활동량 / 질환 정보 수정</string>
    <string name="text_modify_success">수정 하였습니다.</string>
    <string name="text_regist_fail">등록에 실패 하였습니다.</string>
    <string name="text_regist_success">등록이 완료 되었습니다.</string>
    <string name="text_actionbar_drag_title">상태바 드래그시 보이는 타이틀</string>
    <string name="text_actionbar_one_line_message">상태바 한줄 메시지</string>
    <string name="text_permission_info_title">앱 접근권한 안내</string>
    <string name="text_permission_info_content">앱에서 사용하는 접근 권한에 대하여 아래와 같이 안내해 드립니다.\n\n접근권한은 필수적 접근권한과 선택적 접근권한으로 나누어 지며, 선택적 접근 권한의 경우 허용에 동의하지 않으셔도 앱 사용이 가능합니다.\n\n▣ 필수적 접근권한\n없음\n\n▣ 선택적 접근권한\n항목: 위치 권한, 블루투스, 사진첩, 카메라\n이유\n위치 권한: 날씨 및 미세먼지 정보 표시\n블루투스: 혈당계, 체지방계 연동 \n사진첩/카메라:  음식 사진 등록\n</string>
    <string name="please_input_valid_value">올바른 값을 입력해 주세요.</string>
    <string name="you_can_dot_after_number2">소수점 둘째자리 까지 입력 가능합니다.</string>
    <string name="login_auto_login_setting">자동로그인 설정</string>
    <string name="login_save_id">아이디 저장</string>
    <string name="login_signed_in">로그인 된 상태</string>
    <string name="login_signed_out">로그인 안된 상태</string>
    <string name="text_login">로그인</string>
    <string name="login_en">Login</string>
    <string name="login_member_join">회원가입</string>
    <string name="login_id_hint">ID(E-mail)</string>
    <string name="login_password_hint">password</string>
    <string name="login_foget_account">가 기억나지 않으세요?</string>
    <string name="login_quesion_account">아직 회원이 아니세요?</string>
    <string name="txt_search">검색 결과가 없습니다.</string>
    <string name="txt_search_null">검색 결과가 없습니다.</string>
    <string name="text_name_error">2글자 이상 입력해주세요.</string>
    <string name="join_step1_mberchk_title">안내</string>
    <string name="join_step1_mberchk_content">서비스 대상자가 아닙니다.\n보험 가입 시의 정보를 정확히 입력해주세요.</string>
    <string name="join_step1_title">가입 정보 입력(1/3)</string>
    <string name="join_step2_title">가입 정보 입력(2/3)</string>
    <string name="join_step3_title">가입 정보 입력(3/3)</string>
    <string name="join_step1_name_hint">실명을 입력해주세요.</string>
    <string name="join_step1_birthday_hint">예)19801201</string>
    <string name="join_step1_name_hint2">사용자 이름 입력 (최소2자,최대10자)</string>
    <string name="join_step1_name_error">중복된 이름입니다.</string>
    <string name="join_step1_name_error2">올바른 정보를 입력해주세요.</string>
    <string name="join_step1_phone_num_hint">전화번호입력 - 제외</string>
    <string name="join_step1_phone_num_error">올바른 번호를 입력해주세요.</string>
    <string name="join_step1_phone_num_error2">중복된 전화 번호 입니다.</string>
    <string name="join_step1_dont_special_word">특수문자는 사용하실 수 없습니다.</string>
    <string name="join_step2_id_hint">ID (이메일 주소 입력)</string>
    <string name="join_step2_id_info">비밀번호 분실 시 메일로 임시번호를 보내드리니\n수신 가능한 메일을 아이디로 사용해주세요.</string>
    <string name="join_step2_id_error">올바른 이메일 주소를 입력하세요.</string>
    <string name="join_step2_id_error2">이미 사용중 입니다.</string>
    <string name="join_step2_pwd_hint0">기존 비밀번호</string>
    <string name="join_step2_pwd_hint1">압호 임력</string>
    <string name="join_step2_pwd_hint2">암호 확인</string>
    <string name="join_step2_pwd_info">영문, 숫자, 특수문자 포함 8자리 이상</string>
    <string name="join_step2_pwd_error">암호가 일치하지 않습니다.</string>
    <string name="join_step2_pwd_error_leng8">비밀번호는 영문,숫자,특수문자 포함 8~15자리까지 입니다.</string>
    <string name="join_step2_pwd_error_old">기존 비밀번호 입니다.</string>
    <string name="join_step2_pwd_len">최소8자</string>
    <string name="join_step2_success_title">완료</string>
    <string name="join_step2_success_content">아이디 생성이 완료되었습니다.\n기본 건강 설문 작성 후 앱 이용이 가능합니다.</string>
    <string name="join_step3_weight_error">(체중 관리에서 마지막으로 입력한 값입니다.)</string>
    <string name="join_step3_alert_content">앱에서 필요한\n기본 정보를 입력해주세요.</string>
    <string name="join_step1_ing_info">본 어플리케이션은 ING 생명 고객만 이용할 수 있습니다.\n고객 확인을 위해 보험가입 시의 정보를 입력해주시기 바랍니다.</string>
    <string name="join_step1_agree">동의합니다.</string>
    <string name="join_step1_contract2_title">개인정보 제공 동의</string>
    <string name="join_step1_contract2_msg">본인은 (주)녹십자헬스케어가 앱을 통해 다음과 같이 본인의 개인정보를 수집/이용하는 것에 동의합니다.\n\n
    1) 수집항목 : 성명, 성별, 생년월일, 휴대폰번호, 내/외국인 정보\n
    2) 수집 및 이용목적 : 회원인증, 건강정보 제공(LMS), 건강상담 서비스, 검진우대, 병원 예약대행 및 제휴서비스 제공\n
    3) 보유기간 및 이용기간 : 개인정보 획득일로부터 서비스 종료 시까지\n
    ※위 개인정보 수집 및 이용에 동의하지 않으실 경우, 서비스 이용이 불가합니다.
    </string>
    <string name="join_step1_contract3_title">개인민감정보 제공 동의</string>
    <string name="join_step1_contract_error">동의해주세요.</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="find_id_phone_num_desc">가입 시 등록하신 휴대폰 번호를 입력해주세요.</string>
    <string name="find_id_result">검색 결과</string>
    <string name="find_id_dont_regist">가입된 정보가 없습니다.</string>
    <string name="find_id_dont_notice">검색이 되지 않을 경우 녹십자헬스케어\n고객지원센터로 문의 주시기 바랍니다.</string>
    <string name="green_cross_phone_num">1588-2711 (평일 9:00 ~ 18:00)</string>
    <string name="join_step1_contract1_title">이용약관</string>
</resources>