<?xml version="1.0" encoding="utf-8"?>
<!-- 회원가입 2/3-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/common_parent_style"
        android:orientation="vertical"
        android:id="@+id/join_step1_linear">

        <TextView
            android:id="@+id/join_step1_ing_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_step1_ing_info"/>

        <TextView
            android:id="@+id/join_step1_name_textview"
            style="@style/common_textview_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/text_name"/>

        <com.gchc.ing.component.CFontEditText
            android:id="@+id/join_step1_name_edittext"
            android:layout_width="match_parent"
            style="@style/common_edittext_style"
            android:maxLines="1"
            android:maxLength="10"
            android:hint="@string/join_step1_name_hint"
            android:singleLine="true"
            android:gravity="center"/>

        <TextView
            android:id="@+id/join_step1_name_error_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible"
            android:text="@string/text_name_error"
            style="@style/common_textview_validate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_sex"
            android:layout_gravity="center_horizontal"
            style="@style/common_textview_fields"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <RadioGroup
                android:id="@+id/join_step1_sex_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/join_step1_man_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:text="@string/text_mail"
                    android:checked="true"
                    style="@style/common_radio_style_left"/>


                <RadioButton
                    android:id="@+id/join_step1_woman_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    style="@style/common_radio_style_right"
                    android:text="@string/text_femail" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_birth"
            android:layout_gravity="center_horizontal"
            style="@style/common_textview_fields"/>


        <com.gchc.ing.component.CFontEditText
            android:id="@+id/join_step1_birth_edittext"
            style="@style/common_edittext_style"
            android:layout_width="match_parent"
            android:cursorVisible="false"
            android:gravity="center"
            android:inputType="none"
            android:hint="@string/join_step1_birthday_hint"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/join_step1_birth_error_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/please_input_valid_value"
            style="@style/common_textview_validate"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/join_step1_phonenum_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_phonenum"
            android:layout_gravity="center_horizontal"
            style="@style/common_textview_fields"/>


        <com.gchc.ing.component.CFontEditText
            android:id="@+id/join_step1_phonenum_edittext"
            style="@style/common_edittext_style"
            android:layout_width="match_parent"
            android:cursorVisible="false"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/join_step1_phonenum_error_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/please_input_valid_value"
            style="@style/common_textview_validate"
            android:visibility="invisible"/>


        <LinearLayout
            android:id="@+id/join_step1_agreegroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/join_step1_checkbox1"
                    style="@style/common_checkbox_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:id="@+id/join_step1_contract1_textview"
                    style="@style/common_textview_fields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_step1_contract1_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/join_step1_checkbox2"
                    style="@style/common_checkbox_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:id="@+id/join_step1_contract2_textview"
                    style="@style/common_textview_fields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_step1_contract2_title" />

                <TextView
                    android:id="@+id/join_step1_contract_error_textview"
                    style="@style/common_textview_validate"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_step1_contract_error"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/join_step1_checkbox3"
                    style="@style/common_checkbox_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:id="@+id/join_step1_personal_info_textview"
                    style="@style/common_textview_fields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_step1_contract3_title" />
            </LinearLayout>




        </LinearLayout>


        <com.gchc.ing.component.CFontButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/button_on_off"
            android:enabled="false"
            android:text="@string/text_next"
            android:textColor="@color/colorWhite"
            android:fontFamily="NotoSansKR-Bold"/>
    </LinearLayout>
</ScrollView>
