<?xml version="1.0" encoding="utf-8"?><!-- 회원가입 1/3-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            style="@style/common_parent_style"
            android:orientation="vertical">

            <TextView
                android:id="@+id/join_step3_height_textview"
                style="@style/common_textview_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/text_height" />


            <com.gchc.ing.component.CFontEditText
                android:id="@+id/join_step3_height_edittext"
                style="@style/common_edittext_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:hint="170cm"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/join_step3_height_error_textview"
                style="@style/common_textview_validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_input_valid_value"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/join_step3_weight_textview"
                style="@style/common_textview_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/text_weight" />

            <com.gchc.ing.component.CFontEditText
                android:id="@+id/join_step3_weight_edittext"
                style="@style/common_edittext_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:hint="80.00"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/join_step3_weight_error_textview"
                style="@style/common_textview_validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_can_dot_after_number2" />

            <TextView
                android:id="@+id/join_step3_targetweight_textview"
                style="@style/common_textview_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/text_goal_height" />


            <com.gchc.ing.component.CFontEditText
                android:id="@+id/join_step3_target_weight_edittext"
                style="@style/common_edittext_style"
                android:layout_width="match_parent"
                android:gravity="center"
                android:hint="70.00"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/join_step3_target_weight_error_textview"
                style="@style/common_textview_validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_can_dot_after_number2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">

                <com.gchc.ing.component.CFontButton
                    android:id="@+id/next_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_on_off"
                    android:enabled="false"
                    android:text="@string/text_next"
                    android:textColor="@color/colorWhite"
                    app:font="@string/NotoSansKRBold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
